add: resolve issue with frontend and db